Fix logo on mobile

--- a/Home.css
+++ b/Home.css
@@ -1,5 +1,6 @@
  .u-section-1 {
   background-image: url("images/yyy.jpg");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -60,10 +61,6 @@
 }
 
 @media (max-width: 1199px) {
-   .u-section-1 {
-    background-position: 50% 50%;
-  }
-
   .u-section-1 .u-sheet-1 {
     min-height: 377px;
   }
